--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
+    "deep-freeze": "^0.0.1",
     "object-assign": "4.1.0",
     "react": "15.5.4",
     "react-dom": "15.5.4",
@@ -38,7 +40,7 @@
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
@@ -70,12 +72,16 @@
     "eslint-plugin-react": "6.10.3",
     "eslint-watch": "2.1.14",
     "extract-text-webpack-plugin": "2.1.0",
+    "fetch-mock": "^5.11.0",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "18.1.0",
+    "jest-fetch-mock": "^1.1.1",
     "json-loader": "0.5.4",
     "mockdate": "2.0.1",
+    "moxios": "^0.4.0",
+    "nock": "^9.0.13",
     "node-sass": "4.5.2",
     "npm-run-all": "3.1.2",
     "opn-cli": "3.1.0",
@@ -86,6 +92,7 @@
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "15.5.4",
     "redux-immutable-state-invariant": "1.2.4",
+    "redux-mock-store": "^1.2.3",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
     "sass-loader": "6.0.2",
@@ -103,6 +110,9 @@
     "url": ""
   },
   "jest": {
+    "setupFiles": [
+      "./src/tests/helpers/testHelpers.js"
+    ],
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
       "^.+\\.(gif|ttf|eot|svg|woff|woff2|ico)$": "<rootDir>/tools/fileMock.js"
