--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.16.2",
     "deep-freeze": "^0.0.1",
     "object-assign": "4.1.0",
+    "query-string": "^4.3.4",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-redux": "5.0.5",
