--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "deep-freeze": "^0.0.1",
+    "flexboxgrid": "6.3.1",
     "google-map-react": "^0.24.0",
+    "material-ui": "0.18.3",
     "object-assign": "4.1.0",
     "query-string": "^4.3.4",
     "react": "15.5.4",
