--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "query-string": "^4.3.4",
     "react": "15.5.4",
     "react-dom": "15.5.4",
+    "react-icons": "2.2.5",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
