--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
