--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "15.5.4",
     "react-icons": "2.2.5",
     "react-onclickoutside": "6.1.1",
+    "react-paginate": "5.0.0",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
