--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "deep-freeze": "^0.0.1",
-    "express": "^4.15.3",
+    "express": "4.16.2",
     "flexboxgrid": "6.3.1",
     "google-map-react": "^0.24.0",
     "jsonapi-serializer": "3.5.5",
@@ -82,11 +82,11 @@
     "enzyme": "2.8.2",
     "eslint": "3.19.0",
     "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-prettier": "^2.0.1",
+    "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-react": "6.10.3",
     "eslint-watch": "2.1.14",
     "extract-text-webpack-plugin": "2.1.2",
-    "fetch-mock": "^5.11.0",
+    "fetch-mock": "5.13.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
     "identity-obj-proxy": "3.0.0",
@@ -96,12 +96,12 @@
     "json-loader": "0.5.4",
     "mockdate": "2.0.1",
     "moxios": "^0.4.0",
-    "nock": "^9.0.13",
+    "nock": "9.0.22",
     "node-sass": "4.5.2",
     "npm-run-all": "^4.1.1",
     "opn-cli": "3.1.0",
     "postcss-loader": "1.2.1",
-    "prettier": "^1.3.1",
+    "prettier": "1.7.4",
     "prompt": "1.0.0",
     "prop-types": "15.5.10",
     "react-hot-loader": "3.0.0-beta.6",
