--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
+    "react-tabs": "2.1.0",
     "redux": "3.6.0",
     "redux-thunk": "^2.2.0",
     "webpack-dotenv-plugin": "^2.0.2"
