--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "0.17.0",
     "deep-freeze": "^0.0.1",
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
@@ -54,6 +54,7 @@
     "react-tabs": "2.1.0",
     "redux": "3.6.0",
     "redux-thunk": "^2.2.0",
+    "url-parse": "1.2.0",
     "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
