--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "babel-polyfill": "6.20.0",
     "babel-preset-env": "1.3.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "6.16.0",
+    "babel-preset-react": "~6.24",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "6.16.0",
