CS-413 mobile styles for the org cards, add plugins for test .env in .babelrc

--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,15 @@
       ]
     },
     "test": {
-      "presets": ["env"]
+      "presets": [
+        "env"
+      ],
+      "plugins": [
+        "transform-class-properties",
+        "syntax-flow",
+        "transform-flow-strip-types",
+        "transform-decorators-legacy",
+      ]
     }
   },
   "plugins": [
