--- a/.babelrc
+++ b/.babelrc
@@ -1,32 +1,18 @@
 {
-  "presets": [
-    "es2015",
-    "react",
-    "stage-0"
-  ],
+  "presets": ["es2015", "react", "stage-0"],
   "env": {
     "development": {
-      "presets": [
-        "env",
-        "react-hmre",
-        "stage-0"
-      ]
+      "presets": ["env", "react-hmre", "stage-0"]
     },
     "production": {
-      "presets": [
-        [
-          "env",
-        ]
-      ],
+      "presets": [["env", "stage-0"]],
       "plugins": [
         "transform-react-constant-elements",
-        "transform-react-remove-prop-types",
+        "transform-react-remove-prop-types"
       ]
     },
     "test": {
-      "presets": [
-        "env"
-      ]
+      "presets": ["env"]
     }
   },
   "plugins": [
@@ -35,10 +21,11 @@
     "transform-flow-strip-types",
     "transform-decorators-legacy",
     [
-      "transform-runtime", {
+      "transform-runtime",
+      {
         "polyfill": true,
         "regenerator": true
       }
-    ],
+    ]
   ]
 }
