--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
       "presets": [["env", "stage-0"]],
       "plugins": [
         "transform-react-constant-elements",
-        "transform-react-remove-prop-types"
+        "transform-react-remove-prop-types",
+        "transform-class-properties"
       ]
     },
     "test": {
