--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "0.17.0",
+    "chai": "4.1.2",
     "deep-freeze": "^0.0.1",
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
