--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
-    "react-tabs": "2.1.0",
+    "react-tabs": "^2.1.1",
     "react-tap-event-plugin": "2.0.1",
     "react-test-renderer": "16.2.0",
     "redux": "3.6.0",
@@ -132,6 +132,10 @@
   "jest": {
     "setupFiles": [
       "./src/tests/helpers/testHelpers.js"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
     ],
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
