--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-API_URL=https://city-of-sac.herokuapp.com/
+API_URL=https://io-launchpad-api.herokuapp.com/
 NODE_ENV=production
 GOOGLE_MAP_API_KEY=AIzaSyDIc-MoDsemN2P2ypxgP-sT-9DOwK5Ai3U
