key up and down functionality

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-API_URL=http://localhost:8080
+API_URL=https://io-launchpad-api.herokuapp.com/
 GOOGLE_MAP_API_KEY=AIzaSyDIc-MoDsemN2P2ypxgP-sT-9DOwK5Ai3U
