--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,15 @@
   "presets": ["es2015", "react", "stage-0"],
   "env": {
     "development": {
-      "presets": ["env", "react-hmre", "stage-0"]
+      "presets": ["env", "react-hmre", "stage-0"],
+      "plugins": [
+        "transform-decorators-legacy"
+      ]
     },
     "production": {
       "presets": [["env", "stage-0"]],
       "plugins": [
+        "transform-decorators-legacy",
         "transform-react-constant-elements",
         "transform-react-remove-prop-types",
         "transform-class-properties"
@@ -17,18 +21,18 @@
         "env"
       ],
       "plugins": [
+        "transform-decorators-legacy",
         "transform-class-properties",
         "syntax-flow",
-        "transform-flow-strip-types",
-        "transform-decorators-legacy",
+        "transform-flow-strip-types"
       ]
     }
   },
   "plugins": [
+    "transform-decorators-legacy",
     "transform-class-properties",
     "syntax-flow",
     "transform-flow-strip-types",
-    "transform-decorators-legacy",
     [
       "transform-runtime",
       {
