--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "test": "jest",
     "test:CI": "./node_modules/.bin/babel-node tools/testCi.js",
     "test:cover": "npm run test -- --coverage ",
-    "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
+    "test:cover:CI":
+      "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watch",
     "heroku-postbuild": "npm run build",
     "start:prod": "node ./deploy/index.js",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
     "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
-    "eslint": "node_modules/.bin/eslint --fix --ext \".js\" --ignore-pattern node_modules --quiet .",
-    "prettier": "prettier --single-quote --bracket-spacing false --trailing-comma es5 --write '{src,__{tests,mocks}__}/**/*.js'"
+    "eslint":
+      "node_modules/.bin/eslint --fix --ext \".js\" --ignore-pattern node_modules --quiet .",
+    "prettier":
+      "node_modules/.bin/prettier --single-quote --bracket-spacing false --trailing-comma es5 --write '{src,__{tests,mocks}__}/**/*.js'"
   },
   "author": "FullStack Labs",
   "license": "MIT",
@@ -103,7 +106,7 @@
     "mockdate": "2.0.1",
     "moxios": "^0.4.0",
     "nock": "9.0.22",
-    "node-sass": "4.5.2",
+    "node-sass": "^4.5.2",
     "npm-run-all": "^4.1.1",
     "opn-cli": "3.1.0",
     "postcss-loader": "1.2.1",
@@ -130,13 +133,8 @@
     "url": ""
   },
   "jest": {
-    "setupFiles": [
-      "./src/tests/helpers/testHelpers.js"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
+    "setupFiles": ["./src/tests/helpers/testHelpers.js"],
+    "moduleDirectories": ["node_modules", "src"],
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
       "^.+\\.(gif|ttf|eot|svg|woff|woff2|ico)$": "<rootDir>/tools/fileMock.js"
