--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
   "author": "FullStack Labs",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "3.9.2",
     "axios": "0.17.0",
     "chai": "4.1.2",
     "deep-freeze": "^0.0.1",
-    "enzyme-to-json": "2.0.0",
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
     "google-map-react": "^0.27.0",
@@ -46,20 +46,20 @@
     "object-assign": "4.1.0",
     "prop-types": "15.5.10",
     "query-string": "^4.3.4",
-    "react": "15.5.4",
-    "react-dom": "15.5.4",
-    "react-onclickoutside": "6.1.1",
-    "react-paginate": "5.0.0",
-    "react-redux": "5.0.5",
+    "react": "16.8.1",
+    "react-dom": "16.8.1",
+    "react-onclickoutside": "6.7.1",
+    "react-paginate": "6.2.1",
+    "react-redux": "6.0.0",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
-    "react-tabs": "^2.1.1",
-    "react-tap-event-plugin": "2.0.1",
-    "react-test-renderer": "16.2.0",
-    "redux": "3.6.0",
-    "redux-thunk": "^2.2.0",
-    "url-parse": "1.2.0",
-    "webpack-dotenv-plugin": "^2.0.2"
+    "react-tabs": "^3.0.0",
+    "react-tap-event-plugin": "3.0.3",
+    "react-test-renderer": "16.8.1",
+    "redux": "4.0.1",
+    "redux-thunk": "^2.3.0",
+    "url-parse": "1.4.4",
+    "webpack-dotenv-plugin": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
@@ -85,7 +85,8 @@
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "2.11.15",
     "css-loader": "0.26.1",
-    "enzyme": "2.8.2",
+    "enzyme": "3.8.0",
+    "enzyme-to-json": "3.3.5",
     "eslint": "3.19.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-prettier": "2.3.1",
@@ -109,7 +110,7 @@
     "postcss-loader": "1.2.1",
     "prettier": "1.7.4",
     "prompt": "1.0.0",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-test-utils": "15.6.2",
     "react-hot-loader": "3.0.0-beta.6",
     "redux-immutable-state-invariant": "1.2.4",
     "redux-mock-store": "^1.2.3",
