--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "flexboxgrid": "6.3.1",
     "google-map-react": "^0.27.0",
     "jsonapi-serializer": "3.5.5",
-    "material-ui": "0.20.1",
     "object-assign": "4.1.0",
     "prop-types": "15.5.10",
     "query-string": "^4.3.4",
@@ -62,30 +61,28 @@
     "webpack-dotenv-plugin": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "6.5.4",
-    "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
-    "babel-eslint": "7.1.1",
-    "babel-jest": "18.0.0",
-    "babel-loader": "6.2.10",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-constant-elements": "6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.2.11",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "6.20.0",
-    "babel-preset-env": "1.3.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "~6.24",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "6.16.0",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/node": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "8.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "babel-polyfill": "6.26.0",
     "browser-sync": "2.18.5",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "2.11.15",
     "css-loader": "0.26.1",
     "enzyme": "3.8.0",
+    "enzyme-adapter-react-16": "1.9.1",
     "enzyme-to-json": "3.3.5",
     "eslint": "3.19.0",
     "eslint-plugin-import": "2.2.0",
@@ -97,9 +94,9 @@
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "22.0.4",
-    "jest-cli": "21.2.0",
-    "jest-fetch-mock": "^1.1.1",
+    "jest": "24.1.0",
+    "jest-cli": "24.1.0",
+    "jest-fetch-mock": "2.1.0",
     "json-loader": "0.5.4",
     "mockdate": "2.0.1",
     "moxios": "^0.4.0",
@@ -108,7 +105,7 @@
     "npm-run-all": "^4.1.1",
     "opn-cli": "3.1.0",
     "postcss-loader": "1.2.1",
-    "prettier": "1.7.4",
+    "prettier": "1.16.4",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.6.2",
     "react-hot-loader": "3.0.0-beta.6",
@@ -141,6 +138,12 @@
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
       "^.+\\.(gif|ttf|eot|svg|woff|woff2|ico)$": "<rootDir>/tools/fileMock.js"
-    }
+    },
+    "collectCoverage": true,
+    "coverageReporters": [
+      "html",
+      "text-summary"
+    ],
+    "verbose": true
   }
 }
