--- a/.babelrc
+++ b/.babelrc
@@ -33,6 +33,7 @@
   },
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
+    "@babel/plugin-transform-runtime",
     "@babel/plugin-proposal-class-properties",
     "react-hot-loader/babel"
   ]
