--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "npm": "5.6.0",
-    "node": "8.2.1"
+    "npm": "6.4.1",
+    "node": ">=8.0.0 <11.0.0"
   },
   "scripts": {
     "preinstall": "node tools/nodeVersionCheck.js",
@@ -34,6 +34,7 @@
   "author": "FullStack Labs",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "7.3.1",
     "@material-ui/core": "3.9.2",
     "axios": "0.17.0",
     "chai": "4.1.2",
@@ -62,65 +63,70 @@
   },
   "devDependencies": {
     "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.0",
-    "@babel/node": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-transform-react-constant-elements": "7.0.0",
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/core": "7.2.2",
+    "@babel/node": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-transform-react-constant-elements": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.3.1",
     "@babel/preset-react": "7.0.0",
+    "@babel/preset-stage-0": "7.0.0",
     "@babel/register": "7.0.0",
+    "autoprefixer": "9.4.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "babel-loader": "8.0.5",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "babel-polyfill": "6.26.0",
     "browser-sync": "2.18.5",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "2.11.15",
-    "css-loader": "0.26.1",
+    "css-loader": "2.1.0",
+    "cssnano": "4.1.8",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.9.1",
     "enzyme-to-json": "3.3.5",
-    "eslint": "3.19.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-prettier": "2.3.1",
-    "eslint-plugin-react": "6.10.3",
-    "eslint-watch": "2.1.14",
-    "extract-text-webpack-plugin": "2.1.2",
+    "eslint": "5.13.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-watch": "4.0.2",
     "fetch-mock": "5.13.1",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.24.1",
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.1.0",
     "jest-cli": "24.1.0",
     "jest-fetch-mock": "2.1.0",
-    "json-loader": "0.5.4",
-    "mockdate": "2.0.1",
+    "json-loader": "0.5.7",
+    "mini-css-extract-plugin": "0.5.0",
+    "mockdate": "2.0.2",
     "moxios": "^0.4.0",
     "nock": "9.0.22",
-    "node-sass": "^4.5.2",
+    "node-sass": "4.11.0",
     "npm-run-all": "^4.1.1",
     "opn-cli": "3.1.0",
-    "postcss-loader": "1.2.1",
+    "postcss-loader": "3.0.0",
     "prettier": "1.16.4",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.6.2",
     "react-hot-loader": "3.0.0-beta.6",
     "redux-immutable-state-invariant": "1.2.4",
-    "redux-mock-store": "^1.2.3",
+    "redux-mock-store": "1.5.3",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
-    "sass-loader": "6.0.2",
+    "sass-loader": "7.1.0",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "2.2.1",
-    "webpack-bundle-analyzer": "2.1.1",
-    "webpack-dev-middleware": "1.9.0",
-    "webpack-hot-middleware": "2.17.1",
-    "webpack-md5-hash": "0.0.5"
+    "uglifyjs-webpack-plugin": "2.1.1",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.3",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-dev-middleware": "3.5.2",
+    "webpack-hot-middleware": "2.24.3",
+    "webpack-md5-hash": "0.0.6"
   },
   "keywords": [],
   "repository": {
@@ -128,22 +134,13 @@
     "url": ""
   },
   "jest": {
-    "setupFiles": [
-      "./src/tests/helpers/testHelpers.js"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "src"
-    ],
+    "setupFiles": [ "./src/tests/helpers/testHelpers.js" ],
+    "moduleDirectories": [ "node_modules", "src" ],
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
       "^.+\\.(gif|ttf|eot|svg|woff|woff2|ico)$": "<rootDir>/tools/fileMock.js"
     },
-    "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "text-summary"
-    ],
+    "coverageReporters": [ "html", "text-summary" ],
     "verbose": true
   }
 }
