--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "ecmaVersion": 8,
     "sourceType": "module"
   },
-  "plugins": [ "react", "prettier" ],
+  "plugins": [ "react", "prettier", "eslint-config-prettier" ],
   "env": {
     "jest": true,
     "node": true,
@@ -210,9 +210,7 @@
     "valid-typeof": [ 2, { "requireStringLiterals": true } ],
     "vars-on-top": 2,
     "wrap-iife": 2,
-    "wrap-regex": 2,
     "yoda": 2,
-
     "react/forbid-prop-types": 1,
     "react/jsx-boolean-value": [ 2, "always" ],
     "react/jsx-closing-bracket-location": [ 0, { "location": "tag-aligned" } ],
