--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "enzyme-adapter-react-16": "1.9.1",
     "enzyme-to-json": "3.3.5",
     "eslint": "5.13.0",
+    "eslint-config-prettier": "4.0.0",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
@@ -134,13 +135,21 @@
     "url": ""
   },
   "jest": {
-    "setupFiles": [ "./src/tests/helpers/testHelpers.js" ],
-    "moduleDirectories": [ "node_modules", "src" ],
+    "setupFiles": [
+      "./src/tests/helpers/testHelpers.js"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
     "moduleNameMapper": {
       "\\.(css|scss)$": "identity-obj-proxy",
       "^.+\\.(gif|ttf|eot|svg|woff|woff2|ico)$": "<rootDir>/tools/fileMock.js"
     },
-    "coverageReporters": [ "html", "text-summary" ],
+    "coverageReporters": [
+      "html",
+      "text-summary"
+    ],
     "verbose": true
   }
 }
