--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
     "ecmaVersion": 8,
     "sourceType": "module"
   },
-  "plugins": [ "react", "prettier", "eslint-config-prettier" ],
+  "plugins": [ "react", "prettier" ],
   "env": {
     "jest": true,
     "node": true,
@@ -59,7 +59,6 @@
     "global-require": 2,
     "guard-for-in": 2,
     "id-blacklist": 0,
-    "indent": [ "error", 2, { "SwitchCase": 1 } ],
     "jsx-quotes": [ 2, "prefer-double" ],
     "key-spacing": 2,
     "keyword-spacing": 2,
@@ -220,7 +219,6 @@
     "react/jsx-indent-props": [ 2, 2 ],
     "react/jsx-indent": [ 2, 2 ],
     "react/jsx-key": 2,
-    "react/jsx-max-props-per-line": [ 2, { "maximum": 3 } ],
     "react/jsx-no-comment-textnodes": 2,
     "react/jsx-no-literals": 2,
     "react/jsx-pascal-case": 2,
