--- a/package.json
+++ b/package.json
@@ -157,9 +157,6 @@
   },
   "pre-commit": [ "pre-commit" ],
   "lint-staged": {
-    "*.js": [
-      "node_modules/.bin/prettier --single-quote --bracket-spacing false --trailing-comma es5 --write '{src,__{tests,mocks}__}/**/*.js'",
-      "git add"
-    ]
+    "*.js": [ "prettier --single-quote --bracket-spacing false --trailing-comma es5 --write '{src,__{tests,mocks}__}/**/*.js'", "git add" ]
   }
 }
