--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": [ "plugin:prettier/recommended", "plugin:react/recommended", "eslint:recommended" ],
+  "extends": ["plugin:prettier/recommended", "plugin:react/recommended", "eslint:recommended"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
@@ -10,24 +10,25 @@
     "ecmaVersion": 8,
     "sourceType": "module"
   },
-  "plugins": [ "react", "prettier" ],
+  "plugins": ["react", "prettier"],
   "env": {
     "jest": true,
     "node": true,
-    "browser": true
+    "browser": true,
+    "es6": true
   },
   "globals": {
     "Uint8Array": true
   },
   "rules": {
-    "prettier/prettier": [ "error", { "trailingComma": "es5", "singleQuote": true, "bracketSpacing": false } ],
+    "prettier/prettier": ["error", { "trailingComma": "es5", "singleQuote": true, "bracketSpacing": false }],
     "array-bracket-spacing": 2,
     "array-callback-return": 2,
     "arrow-body-style": 0,
-    "arrow-parens": [ 0, "as-needed" ],
+    "arrow-parens": [0, "as-needed"],
     "arrow-spacing": 2,
     "block-scoped-var": 2,
-    "brace-style": [ 2, "1tbs", { "allowSingleLine": false } ],
+    "brace-style": [2, "1tbs", { "allowSingleLine": false }],
     "camelcase": 0,
     "class-methods-use-this": 0,
     "comma-dangle": [
@@ -45,20 +46,20 @@
     "complexity": 1,
     "computed-property-spacing": 2,
     "consistent-return": 0,
-    "consistent-this": [ 2, "self" ],
+    "consistent-this": [2, "self"],
     "constructor-super": 2,
     "curly": 1,
-    "dot-location": [ 2, "property" ],
-    "dot-notation": [ 2, { "allowPattern": "^[a-z]+(_[a-z]+)+$" } ],
-    "eqeqeq": [ 2, "smart" ],
+    "dot-location": [2, "property"],
+    "dot-notation": [2, { "allowPattern": "^[a-z]+(_[a-z]+)+$" }],
+    "eqeqeq": [2, "smart"],
     "func-call-spacing": 2,
     "func-names": 2,
-    "func-style": [ 2, "declaration", { "allowArrowFunctions": true } ],
+    "func-style": [2, "declaration", { "allowArrowFunctions": true }],
     "generator-star-spacing": 2,
     "global-require": 2,
     "guard-for-in": 2,
     "id-blacklist": 0,
-    "jsx-quotes": [ 2, "prefer-double" ],
+    "jsx-quotes": [2, "prefer-double"],
     "key-spacing": 2,
     "keyword-spacing": 2,
     "line-comment-position": 1,
@@ -73,7 +74,7 @@
       }
     ],
     "max-lines": 0,
-    "max-nested-callbacks": [ 2, { "max": 4 } ],
+    "max-nested-callbacks": [2, { "max": 4 }],
     "max-statements-per-line": 2,
     "multiline-ternary": 0,
     "new-cap": 2,
@@ -94,7 +95,7 @@
     "no-dupe-class-members": 2,
     "no-dupe-keys": 2,
     "no-duplicate-case": 2,
-    "no-duplicate-imports": [ 0, { "includeExports": true } ],
+    "no-duplicate-imports": [0, { "includeExports": true }],
     "no-else-return": 2,
     "no-empty-function": 0,
     "no-empty-pattern": 2,
@@ -126,7 +127,7 @@
     "no-mixed-spaces-and-tabs": 2,
     "no-multi-spaces": 2,
     "no-multi-str": 2,
-    "no-multiple-empty-lines": [ 2, { "max": 1 } ],
+    "no-multiple-empty-lines": [2, { "max": 1 }],
     "no-native-reassign": 2,
     "no-negated-condition": 2,
     "no-nested-ternary": 2,
@@ -141,8 +142,8 @@
     "no-process-exit": 2,
     "no-proto": 2,
     "no-redeclare": 2,
-    "no-return-assign": [ 2, "always" ],
-    "no-self-assign": [ 2, { "props": true } ],
+    "no-return-assign": [2, "always"],
+    "no-self-assign": [2, { "props": true }],
     "no-self-compare": 2,
     "no-sequences": 2,
     "no-shadow-restricted-names": 2,
@@ -158,13 +159,13 @@
     "no-undefined": 2,
     "no-underscore-dangle": 0,
     "no-unmodified-loop-condition": 2,
-    "no-unneeded-ternary": [ 2, { "defaultAssignment": false } ],
+    "no-unneeded-ternary": [2, { "defaultAssignment": false }],
     "no-unreachable": 2,
     "no-unsafe-finally": 2,
     "no-unsafe-negation": 2,
     "no-unused-expressions": 2,
-    "no-unused-vars": [ 2, { "varsIgnorePattern": "^(React|_)$", "argsIgnorePattern": "^_" } ],
-    "no-use-before-define": [ 2, { "classes": false, "functions": false, "variables": false } ],
+    "no-unused-vars": [2, { "varsIgnorePattern": "^(React|_)$", "argsIgnorePattern": "^_" }],
+    "no-use-before-define": [2, { "classes": false, "functions": false, "variables": false }],
     "no-useless-computed-key": 2,
     "no-useless-concat": 2,
     "no-useless-constructor": 2,
@@ -182,16 +183,16 @@
     "one-var-declaration-per-line": 2,
     "one-var": 0,
     "operator-linebreak": 0,
-    "padded-blocks": [ 2, "never" ],
+    "padded-blocks": [2, "never"],
     "prefer-arrow-callback": 2,
-    "prefer-const": [ 2, { "destructuring": "all" } ],
+    "prefer-const": [2, { "destructuring": "all" }],
     "prefer-numeric-literals": 2,
     "prefer-reflect": 0,
     "prefer-rest-params": 2,
     "prefer-spread": 2,
     "prefer-template": 0,
-    "quote-props": [ 2, "as-needed" ],
-    "quotes": [ 2, "single", { "avoidEscape": true } ],
+    "quote-props": [2, "as-needed"],
+    "quotes": [2, "single", { "avoidEscape": true }],
     "radix": 2,
     "require-yield": 2,
     "rest-spread-spacing": 2,
@@ -202,21 +203,21 @@
     "space-before-blocks": 2,
     "space-in-parens": 2,
     "space-infix-ops": 2,
-    "space-unary-ops": [ 2, { "words": true, "nonwords": false } ],
+    "space-unary-ops": [2, { "words": true, "nonwords": false }],
     "symbol-description": 2,
     "template-curly-spacing": 2,
-    "valid-typeof": [ 2, { "requireStringLiterals": true } ],
+    "valid-typeof": [2, { "requireStringLiterals": true }],
     "vars-on-top": 2,
     "wrap-iife": 2,
     "yoda": 2,
     "react/forbid-prop-types": 1,
-    "react/jsx-boolean-value": [ 2, "always" ],
-    "react/jsx-closing-bracket-location": [ 0, { "location": "tag-aligned" } ],
-    "react/jsx-curly-spacing": [ 2, "never" ],
-    "react/jsx-equals-spacing": [ 2, "never" ],
-    "react/jsx-first-prop-new-line": [ 2, "multiline-multiprop" ],
-    "react/jsx-indent-props": [ 2, 2 ],
-    "react/jsx-indent": [ 2, 2 ],
+    "react/jsx-boolean-value": [2, "always"],
+    "react/jsx-closing-bracket-location": [0, { "location": "tag-aligned" }],
+    "react/jsx-curly-spacing": [2, "never"],
+    "react/jsx-equals-spacing": [2, "never"],
+    "react/jsx-first-prop-new-line": [2, "multiline-multiprop"],
+    "react/jsx-indent-props": [2, 2],
+    "react/jsx-indent": [2, 2],
     "react/jsx-key": 2,
     "react/jsx-no-comment-textnodes": 2,
     "react/jsx-no-literals": 2,
@@ -226,7 +227,7 @@
     "react/no-array-index-key": 2,
     "react/no-did-mount-set-state": 2,
     "react/no-did-update-set-state": 2,
-    "react/no-multi-comp": [ 2, { "ignoreStateless": true } ],
+    "react/no-multi-comp": [2, { "ignoreStateless": true }],
     "react/no-render-return-value": 2,
     "react/no-string-refs": 0,
     "react/no-unescaped-entities": 2,
@@ -237,7 +238,7 @@
     "react/require-render-return": 2,
     "react/self-closing-comp": 2,
     "react/sort-comp": 2,
-    "react/sort-prop-types": [ 2, { "ignoreCase": true } ],
+    "react/sort-prop-types": [2, { "ignoreCase": true }],
     "react/style-prop-object": 2
   }
 }
