CS-589 Displayed scheduler from kendo ui

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "@babel/runtime": "7.3.1",
     "@material-ui/core": "3.9.2",
+    "@progress/kendo-scheduler-react-wrapper": "2018.3.1017",
+    "@progress/kendo-theme-default": "3.3.1",
+    "@progress/kendo-ui": "2019.1.227",
     "axios": "0.17.0",
     "chai": "4.1.2",
     "deep-freeze": "^0.0.1",
