CS-588 Filter events by featured

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   "env": {
     "jest": true,
     "node": true,
-    "browser": true
+    "browser": true,
+    "es6": true
   },
   "globals": {
     "Uint8Array": true
