--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "0.17.0",
     "chai": "4.1.2",
     "deep-freeze": "^0.0.1",
+    "dompurify": "1.0.10",
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
     "formik": "1.5.1",
@@ -50,6 +51,7 @@
     "query-string": "^4.3.4",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-medium-editor": "1.8.1",
     "react-onclickoutside": "6.7.1",
     "react-paginate": "6.2.1",
     "react-redux": "6.0.0",
