--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "6.0.0",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
+    "react-swipeable-views": "0.13.1",
     "react-tabs": "^3.0.0",
     "react-tap-event-plugin": "3.0.3",
     "react-test-renderer": "16.8.1",
