--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prop-types": "15.5.10",
     "query-string": "^4.3.4",
     "react": "16.8.1",
+    "react-autosize-textarea": "7.0.0",
     "react-dom": "16.8.1",
     "react-medium-editor": "1.8.1",
     "react-onclickoutside": "6.7.1",
