--- a/package.json
+++ b/package.json
@@ -44,11 +44,14 @@
     "chai": "4.1.2",
     "deep-freeze": "^0.0.1",
     "dompurify": "1.0.10",
+    "draft-convert": "2.1.4",
+    "draft-js-video-plugin": "2.0.1",
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
     "formik": "1.5.1",
     "google-map-react": "^0.27.0",
     "jsonapi-serializer": "3.5.5",
+    "medium-draft": "0.5.12",
     "object-assign": "4.1.0",
     "prop-types": "15.5.10",
     "query-string": "^4.3.4",
