CS-650 Use Color variable with new style constant

--- a/package.json
+++ b/package.json
@@ -160,7 +160,8 @@
       "@Actions(.*)$": "<rootDir>/src/actions/$1",
       "@Shared(.*)$": "<rootDir>/src/components/shared/$1",
       "@Utils(.*)$": "<rootDir>/src/utils/$1",
-      "@StaticData(.*)$": "<rootDir>/src/static-data/$1"
+      "@StaticData(.*)$": "<rootDir>/src/static-data/$1",
+      "@Styles(.*)$": "<rootDir>/src/styles/$1"
     },
     "coverageReporters": [
       "html",
