--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "express": "4.16.2",
     "flexboxgrid": "6.3.1",
     "formik": "1.5.1",
-    "google-map-react": "^0.27.0",
+    "google-map-react": "1.1.4",
     "jsonapi-serializer": "3.5.5",
     "medium-draft": "0.5.12",
     "object-assign": "4.1.0",
