--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-autosize-textarea": "7.0.0",
     "react-dom": "16.8.1",
     "react-medium-editor": "1.8.1",
+    "react-number-format": "4.0.7",
     "react-onclickoutside": "6.7.1",
     "react-paginate": "6.2.1",
     "react-redux": "6.0.0",
@@ -134,6 +135,7 @@
     "redux-immutable-state-invariant": "1.2.4",
     "redux-mock-store": "1.5.3",
     "replace": "0.3.0",
+    "request": "2.88.0",
     "rimraf": "2.5.4",
     "sass-loader": "7.1.0",
     "style-loader": "0.13.1",
@@ -173,7 +175,10 @@
       "html",
       "text-summary"
     ],
-    "verbose": true
+    "verbose": true,
+    "modulePaths": [
+      "<rootDir>"
+    ]
   },
   "pre-commit": [
     "pre-commit"
