Updated default enviroment

--- a/.env.default
+++ b/.env.default
@@ -1,3 +1,4 @@
 API_URL=https://io-launchpad-api.herokuapp.com/
 NODE_ENV=
-GOOGLE_MAP_API_KEY=AIzaSyDIc-MoDsemN2P2ypxgP-sT-9DOwK5Ai3U
+GOOGLE_MAP_API_KEY=AIzaSyDQhfeaCIw-luZVm2q5gziqvI4QYExAnzw
+SENTRY_DSN=
